# pyNewmarkDisp

./: .gitignore  404.html  LICENSE  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: history.md  index.md
docs/tutorials/: 01_dummy_example.ipynb
examples/: 01_dummy_example.py  example01.py  example_01.py  example_02.py  example_03.py  example_04.py
history/: index.html
package/: index.html  package.md
pynewmarkdisp/: __init__.py  empir_corr.py  infslope.py  newmark.py  permanent_disp.py  spatial.py
raw.githubusercontent.com/eamontoyaa/data4testing/main/pynewmarkdisp/input_files_example_02/: slope.txt  zones.txt
references/: index.html  references.md
tutorials/01_dummy_example/: index.html
